Add collaboration plug-in

--- a/plugins/team_collaboration/web.templates.plugins/team_collaboration.html
+++ b/plugins/team_collaboration/web.templates.plugins/team_collaboration.html
@@ -25,7 +25,7 @@
   <!-- breadcrumb -->
   <ol class="breadcrumb">
     <li><a href="/">Home</a></li>
-    <li class="active">Team Colaboration</li>
+    <li class="active">{{name}}</li>
   </ol>
   <!--  Settings -->
   <div class="well well-small tab">
